--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,4 +1,6 @@
 @import "config";
+@import "menu";
+
 * {
   box-sizing: border-box;
 }
@@ -6,7 +8,7 @@
 body {
   @include background;
   background: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -44,7 +46,8 @@ header {
 }
 main {
   padding: 4rem;
-  height: 100%;
+  // height: 100%;
+  min-height: calc(100vh - 60px);
 
   .icons {
     margin-top: 1rem;
@@ -64,3 +67,122 @@ main {
     }
   }
 }
+
+main#about img {
+  width: 250px;
+  height: 250px;
+}
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas: "bioimage bio bio" "job1 job2 job3";
+  grid-template-columns: repeat("3, 1fr");
+  text-align: center;
+  // grid-row-gap: 3rem;
+}
+.bio-image {
+  grid-area: bioimage;
+  margin: auto;
+  border-radius: 50%;
+  border: 3px solid $secondry-color;
+}
+
+.bio {
+  grid-area: bio;
+  font-size: 1.5rem;
+}
+.job-1 {
+  grid-area: job1;
+}
+.job-2 {
+  grid-area: job2;
+}
+.job-3 {
+  grid-area: job3;
+}
+.jobs {
+  background: lighten($primary-color, 5);
+  padding: 0.5rem;
+  border-bottom: $secondry-color 5px solid;
+}
+
+// Work/projects
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondry-color;
+      @include easeOut;
+    }
+  }
+}
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+  div {
+    font-size: 2rem;
+    border: 3px solid #fff;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+    &:hover {
+      cursor: pointer;
+      padding: 0.5rem 1.5rem;
+      background: $secondry-color;
+      color: set-text-color($secondry-color);
+      span {
+        color: set-text-color($secondry-color);
+      }
+    }
+  }
+}
+
+// Button Styles
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $secondry-color;
+    color: set-text-color($secondry-color);
+  }
+}
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  background: red;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #a6a6a6;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-track {
+}
+@import "mobile";
